--- a/part2/CuSP/cumulative.tex
+++ b/part2/CuSP/cumulative.tex
@@ -1341,7 +1341,7 @@ en parallèle à cause de la capacité de la ressource. Si l'activité $j$
 commence à $\ES[j]$, alors elle intersecterait complètement $moi_i$ et
 il serait impossible d'ordonancer $i$. Sur la partie droite de la
 figure, $\ES[j]$ a été ajusté et l'activité $j$ ne peut commencer
-avant la fin de $moi_i$.
+avant $t > \min{moi_i}$.
 
   \begin{figure}[!htb]
     \centering
