ch1 vu par Christian

--- a/main_file.bib
+++ b/main_file.bib
@@ -436,6 +436,19 @@ url="http://dx.doi.org/10.1007/978-3-642-40627-0_42"
 } 
 
 
+@ARTICLE{W80,
+author={J. Weglarz},
+journal={IEEE Transactions on Computers},
+title={Multiprocessor Scheduling with Memory Allocation - A Deterministic Approach},
+year={1980},
+volume={C-29},
+number={8},
+pages={703-709},
+keywords={Deterministic scheduling;independent tasks;memory allocation;multiprocessor system;paged-virtual memory;Central Processing Unit;Control engineering;Multiprocessing systems;Nonlinear equations;Optimal scheduling;Processor scheduling;Scheduling algorithm;Stochastic processes;Stochastic systems;Stress;Deterministic scheduling;independent tasks;memory allocation;multiprocessor system;paged-virtual memory},
+doi={10.1109/TC.1980.1675652},
+ISSN={0018-9340},
+month={Aug},}
+
 
 @Inbook{V11,
 author="Vil{\'i}m, Petr",
