--- a/part1/chap1.tex
+++ b/part1/chap1.tex
@@ -5,16 +5,17 @@
   \parttoc 
 \end{minipage}
 
-\chapter{Ordonnancement, ressource et énergie}
+\chapter{Ordonnancement, ressources cumulatives et énergie}
 
 Dans ce chapitre, nous commençons par définir ce qu'est un problème
-d'ordonnacement et quelles sont les principales caractéristiques de
+d'ordonnancement et quelles sont les principales caractéristiques de
 ces problèmes. Ensuite, nous présenterons deux exemples de problèmes
-d'ordonnacement cumulatifs que nous utiliserons tout au long de ce
-manuscrit, le problème d'ordonnacment de projet à contraintes de
+d'ordonnancement cumulatifs que nous utiliserons tout au long de ce
+manuscrit, le problème d'ordonnancement de projet à contraintes de
 ressources (RCPSP) et le problème cumulatif (CuSP). Nous montrerons
-ensuite les limites de ces problèmes et nous introduirons une nouvelle 
-extension du CuSP, le problème d'ordonnacement continu à contraintes
+ensuite les limites de ces problèmes en termes de modélisation des
+modalités d'utilisation de certaines ressources et nous introduirons une nouvelle 
+extension du CuSP, le problème d'ordonnancement continu à contraintes
 énergétiques (CECSP), pour pallier ces limites. Cette nouvelle
 extension sera ensuite comparée aux extensions existantes du \RCPSP~et
 du \CUSP.  Enfin, plusieurs propriétés du \CECSP, qui seront utilisées
